# algorithms

./: .bash_aliases  README.md  TAGS.md
cpp/: .gitignore  README.md
cpp/bfs/: results-2.md
cpp/bfs/include/: bfs.hpp  threads.hpp
cpp/bfs/tests/: bfs.cpp  bfs_stress.cpp
cpp/data-structures/include/: teque.hpp
cpp/dynamic-programming/include/: combinations.hpp  pascal.hpp  permutations.hpp  scs.hpp
cpp/geometry/: CMakeLists.txt
cpp/geometry/include/: intersections.hpp  pointinpolygon.hpp  polygonarea.hpp
cpp/geometry/tests/: intersections.cpp  pointinpolygon.cpp  polygonarea.cpp
cpp/graphs/: CMakeLists.txt
cpp/graphs/bfs/: CMakeLists.txt  results-1.md  results-1_breakdown.md  results-3.md  results.md
cpp/graphs/bfs/include/: bfs.hpp  threads.hpp
cpp/graphs/bfs/tests/: bfs.cpp  bfs_stress.cpp
cpp/graphs/include/: dfs.hpp  dijkstra.hpp  dinic.hpp  dsu.hpp  hungarian.hpp  mcmf.hpp  mst.hpp  transform.hpp
cpp/graphs/tests/: dfs.cpp  dijkstra.cpp  dinic.cpp  dinic_test.cpp  dsu.cpp  dsu_test.cpp  hungarian.cpp  mcmf.cpp  transform.cpp  transform_stress.cpp
cpp/numbers/: CMakeLists.txt
cpp/numbers/include/: fourier.hpp  pascal.hpp  primes.hpp  regression.hpp  sieve.hpp
cpp/numbers/tests/: nums.cpp  regression.cpp
cpp/strings/include/: scs.hpp
cpp/strings/tests/: scs.cpp
data-structures/: CMakeLists.txt
data-structures/include/: fenwick.hpp  segment_tree.hpp  sparse_table.hpp  suffix_array.hpp  trie.hpp
data-structures/tests/: fenwick_test.cpp  segment_tree_test.cpp
dynamic-programming/: CMakeLists.txt
dynamic-programming/include/: grundy.hpp  knapsack.hpp  lcs.hpp  lis.hpp
dynamic-programming/tests/: scs.cpp
geometry/: CMakeLists.txt
geometry/include/: polygonarea.hpp
geometry/tests/: intersections.cpp  intersections_test.cpp  polygon_test.cpp  polygonarea.cpp  polygonarea_test.cpp
graphs/: CMakeLists.txt
graphs/bench/: transform_stress.cpp
graphs/include/: bellman_ford.hpp  bfs.hpp  dfs.hpp  dijkstra.hpp  dinic.hpp  dsu.hpp  floyd_warshall.hpp  hungarian.hpp  mcmf.hpp  mst.hpp  segment_tree.hpp  sparse_table.hpp  transform.hpp  trie.hpp
graphs/tests/: dfs_test.cpp  dijkstra_test.cpp  dinic_test.cpp  dsu_test.cpp  hungarian_test.cpp  mcmf_test.cpp  mst.cpp  mst_test.cpp  transform.cpp
include/graphs/: bfs.hpp
kattis/: SOLVED.md
numbers/include/: bits.hpp  fourier.hpp  int128.hpp  mod.hpp  regression.hpp
numbers/tests/: primes_test.cpp  regression_test.cpp
rust/: .gitignore
strings/include/: aho_corasick.hpp  kmp.hpp  lcs.hpp  rolling_hash.hpp  suffix_array.hpp  trie.hpp  z.hpp
tests/: bfs.cpp  bfs_stress.cpp
